--- a/pipeline/Makefile
+++ b/pipeline/Makefile
@@ -18,16 +18,21 @@ clean_uv:
 	uv cache clean
 
 clean_dvc:
-	cd pipeline && dvc gc -fw && cd ..
+	dvc gc -fw && cd ..
 
 clean_docker:
 	docker system prune -a -f
 
 clean_cache:
+	cd .. && find . -name "__pycache__" -exec rm -rf {} +
+	cd .. && find . -name ".pytest_cache" -exec rm -rf {} +
 	cd .. && find . -name ".ruff_cache" -exec rm -rf {} +
 	cd .. && find . -name ".uv_cache" -exec rm -rf {} +
-	cd .. && find . -name ".venv" -exec rm -rf {} +
+	cd .. && find . -name ".uv.lock" -exec rm -rf {} +
 	cd .. && find . -name ".venv-*" -exec rm -rf {} +
+	cd .. && find . -name ".venv" -exec rm -rf {} +
+	cd .. && find . -name "*.egg-info" -exec rm -rf {} +
+	cd .. && find . -name "*.log" -exec rm -rf {} +
 	cd .. && find . -name "build" -exec rm -rf {} +
 	cd .. && find . -name "debug" -exec rm -rf {} +
 	cd .. && find . -name "dist" -exec rm -rf {} +
@@ -35,9 +40,5 @@ clean_cache:
 	cd .. && find . -name "mlruns" -exec rm -rf {} +
 	cd .. && find . -name "outputs" -exec rm -rf {} +
 	cd .. && find . -name "pipeline.egg-info" -exec rm -rf {} +
-	cd .. && find . -name "__pycache__" -exec rm -rf {} +
-	cd .. && find . -name ".pytest_cache" -exec rm -rf {} +
-	cd .. && find . -name "*.egg-info" -exec rm -rf {} +
-	cd .. && find . -name "*.log" -exec rm -rf {} +
 
 .PHONY: all clean install chkpkg unlock clean_uv clean_dvc clean_docker clean_cache
