--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -17,7 +17,7 @@ stages:
       - pipeline/stages/stage.py
       - requirements/base.txt
     metrics:
-      - metrics/infrastruct/metrics.json:
+      - metrics/infrastruct:
           cache: true
 
   ingest:
@@ -41,26 +41,14 @@ stages:
       - pipeline/stages/ingest.py
       - pipeline/stages/stage.py
     outs:
-      - data/raw/data.parquet:
-          cache: true
-      - data/raw/data.csv:
-          cache: true
-      - data/raw/variables.json:
-          cache: true
-      - data/raw/metadata.json:
+      - data/raw:
           cache: true
     metrics:
-      - metrics/ingest/metrics.json:
+      - metrics/ingest:
           cache: true
     plots:
-      - plots/ingest/missing_values.png:
-          x: feature
-          y: missing_rate
-          title: Distribution - Missing Values
-      - plots/ingest/data_types.png:
-          x: dtype
-          y: count
-          title: Distribution - Data Types
+      - plots/ingest:
+          cache: true
 
   preprocess:
     cmd: >-
@@ -85,49 +73,11 @@ stages:
       - data/interim/cleaned.parquet:
           cache: true
     metrics:
-      - metrics/preprocess/metrics.json:
+      - metrics/preprocess:
           cache: true
     plots:
-      - plots/preprocess/missing_values.png:
-          x: feature
-          y: missing_rate
-          title: Heatmap - Missing Values
-      - plots/preprocess/time_in_hospital_distribution.png:
-          x: time_in_hospital
-          y: count
-          title: Distribution - time_in_hospital
-      - plots/preprocess/num_lab_procedures_distribution.png:
-          x: num_lab_procedures
-          y: count
-          title: Distribution - num_lab_procedures
-      - plots/preprocess/num_procedures_distribution.png:
-          x: num_procedures
-          y: count
-          title: Distribution - num_procedures
-      - plots/preprocess/num_medications_distribution.png:
-          x: num_medications
-          y: count
-          title: Distribution - num_medications
-      - plots/preprocess/number_diagnoses_distribution.png:
-          x: number_diagnoses
-          y: count
-          title: Distribution - number_diagnoses
-      - plots/preprocess/number_outpatient_distribution.png:
-          x: number_outpatient
-          y: count
-          title: Distribution - number_outpatient
-      - plots/preprocess/number_emergency_distribution.png:
-          x: number_emergency
-          y: count
-          title: Distribution - number_emergency
-      - plots/preprocess/number_inpatient_distribution.png:
-          x: number_inpatient
-          y: count
-          title: Distribution - number_inpatient
-      - plots/preprocess/readmission_distribution.png:
-          x: readmitted
-          y: count
-          title: Distribution - readmitted
+      - plots/preprocess:
+          cache: true
 
   explore:
     cmd: >-
@@ -150,233 +100,11 @@ stages:
       - pipeline/stages/explore.py
       - pipeline/stages/stage.py
     metrics:
-      - metrics/explore/metrics.json:
+      - metrics/explore:
           cache: true
     plots:
-      - plots/explore/clinical_numeric_correlation_heatmap.png:
-          x: feature1
-          y: feature2
-          title: Clinical - Correlation Heatmap
-      - plots/explore/service_numeric_correlation_heatmap.png:
-          x: feature1
-          y: feature2
-          title: Service - Correlation Heatmap
-      - plots/explore/race_distribution.png:
-          x: race
-          y: count
-          title: Race Distribution and Readmission Status
-      - plots/explore/gender_distribution.png:
-          x: gender
-          y: count
-          title: Gender Distribution and Readmission Status
-      - plots/explore/age_distribution.png:
-          x: age
-          y: count
-          title: Age Distribution and Readmission Status
-      - plots/explore/max_glu_serum_distribution.png:
-          x: max_glu_serum
-          y: count
-          title: Max Glucose Serum Distribution and Readmission Status
-      - plots/explore/A1Cresult_distribution.png:
-          x: A1Cresult
-          y: count
-          title: A1C Result Distribution and Readmission Status
-      - plots/explore/metformin_distribution.png:
-          x: metformin
-          y: count
-          title: Metformin Distribution and Readmission Status
-      - plots/explore/glyburide_distribution.png:
-          x: glyburide
-          y: count
-          title: Glyburide Distribution and Readmission Status
-      - plots/explore/insulin_distribution.png:
-          x: insulin
-          y: count
-          title: Insulin Distribution and Readmission Status
-      - plots/explore/glyburide-metformin_distribution.png:
-          x: glyburide-metformin
-          y: count
-          title: Glyburide-Metformin Distribution and Readmission Status
-      - plots/explore/glipizide-metformin_distribution.png:
-          x: glipizide-metformin
-          y: count
-          title: Glipizide-Metformin Distribution and Readmission Status
-      - plots/explore/metformin-rosiglitazone_distribution.png:
-          x: metformin-rosiglitazone
-          y: count
-          title: Metformin-Rosiglitazone Distribution and Readmission Status
-      - plots/explore/metformin-pioglitazone_distribution.png:
-          x: metformin-pioglitazone
-          y: count
-          title: Metformin-Pioglitazone Distribution and Readmission Status
-      - plots/explore/diag_1_distribution.png:
-          x: diag_1
-          y: count
-          title: Diagnosis 1 Distribution and Readmission Status
-      - plots/explore/diag_2_distribution.png:
-          x: diag_2
-          y: count
-          title: Diagnosis 2 Distribution and Readmission Status
-      - plots/explore/diag_3_distribution.png:
-          x: diag_3
-          y: count
-          title: Diagnosis 3 Distribution and Readmission Status
-      - plots/explore/race_chi_square.png:
-          x: race
-          y: readmitted
-          title: Chi-Square Test for Race
-      - plots/explore/gender_chi_square.png:
-          x: gender
-          y: readmitted
-          title: Chi-Square Test for Gender
-      - plots/explore/age_chi_square.png:
-          x: age
-          y: readmitted
-          title: Chi-Square Test for Age
-      - plots/explore/payer_code_chi_square.png:
-          x: payer_code
-          y: readmitted
-          title: Chi-Square Test for Payer Code
-      - plots/explore/medical_specialty_chi_square.png:
-          x: medical_specialty
-          y: readmitted
-          title: Chi-Square Test for Medical Specialty
-      - plots/explore/diag_1_chi_square.png:
-          x: diag_1
-          y: readmitted
-          title: Chi-Square Test for Diagnosis 1
-      - plots/explore/diag_2_chi_square.png:
-          x: diag_2
-          y: readmitted
-          title: Chi-Square Test for Diagnosis 2
-      - plots/explore/diag_3_chi_square.png:
-          x: diag_3
-          y: readmitted
-          title: Chi-Square Test for Diagnosis 3
-      - plots/explore/max_glu_serum_chi_square.png:
-          x: max_glu_serum
-          y: readmitted
-          title: Chi-Square Test for Max Glucose Serum
-      - plots/explore/A1Cresult_chi_square.png:
-          x: A1Cresult
-          y: readmitted
-          title: Chi-Square Test for A1C Result
-      - plots/explore/metformin_chi_square.png:
-          x: metformin
-          y: readmitted
-          title: Chi-Square Test for Metformin
-      - plots/explore/repaglinide_chi_square.png:
-          x: repaglinide
-          y: readmitted
-          title: Chi-Square Test for Repaglinide
-      - plots/explore/nateglinide_chi_square.png:
-          x: nateglinide
-          y: readmitted
-          title: Chi-Square Test for Nateglinide
-      - plots/explore/chlorpropamide_chi_square.png:
-          x: chlorpropamide
-          y: readmitted
-          title: Chi-Square Test for Chlorpropamide
-      - plots/explore/glimepiride_chi_square.png:
-          x: glimepiride
-          y: readmitted
-          title: Chi-Square Test for Glimepiride
-      - plots/explore/acetohexamide_chi_square.png:
-          x: acetohexamide
-          y: readmitted
-          title: Chi-Square Test for Acetohexamide
-      - plots/explore/glipizide_chi_square.png:
-          x: glipizide
-          y: readmitted
-          title: Chi-Square Test for Glipizide
-      - plots/explore/glyburide_chi_square.png:
-          x: glyburide
-          y: readmitted
-          title: Chi-Square Test for Glyburide
-      - plots/explore/tolbutamide_chi_square.png:
-          x: tolbutamide
-          y: readmitted
-          title: Chi-Square Test for Tolbutamide
-      - plots/explore/pioglitazone_chi_square.png:
-          x: pioglitazone
-          y: readmitted
-          title: Chi-Square Test for Pioglitazone
-      - plots/explore/rosiglitazone_chi_square.png:
-          x: rosiglitazone
-          y: readmitted
-          title: Chi-Square Test for Rosiglitazone
-      - plots/explore/acarbose_chi_square.png:
-          x: acarbose
-          y: readmitted
-          title: Chi-Square Test for Acarbose
-      - plots/explore/miglitol_chi_square.png:
-          x: miglitol
-          y: readmitted
-          title: Chi-Square Test for Miglitol
-      - plots/explore/troglitazone_chi_square.png:
-          x: troglitazone
-          y: readmitted
-          title: Chi-Square Test for Troglitazone
-      - plots/explore/tolazamide_chi_square.png:
-          x: tolazamide
-          y: readmitted
-          title: Chi-Square Test for Tolazamide
-      - plots/explore/insulin_chi_square.png:
-          x: insulin
-          y: readmitted
-          title: Chi-Square Test for Insulin
-      - plots/explore/glyburide-metformin_chi_square.png:
-          x: glyburide-metformin
-          y: readmitted
-          title: Chi-Square Test for Glyburide-Metformin
-      - plots/explore/glipizide-metformin_chi_square.png:
-          x: glipizide-metformin
-          y: readmitted
-          title: Chi-Square Test for Glipizide-Metformin
-      - plots/explore/glimepiride-pioglitazone_chi_square.png:
-          x: glimepiride-pioglitazone
-          y: readmitted
-          title: Chi-Square Test for Glimepiride-Pioglitazone
-      - plots/explore/metformin-pioglitazone_chi_square.png:
-          x: metformin-pioglitazone
-          y: readmitted
-          title: Chi-Square Test for Metformin-Pioglitazone
-      - plots/explore/change_chi_square.png:
-          x: change
-          y: readmitted
-          title: Chi-Square Test for Change
-      - plots/explore/diabetesMed_chi_square.png:
-          x: diabetesMed
-          y: readmitted
-          title: Chi-Square Test for DiabetesMed
-      - plots/explore/lab_results_distribution.png:
-          x: result
-          y: count
-          title: Lab Results Distribution and Readmission Status
-      - plots/explore/service_utilization_distribution.png:
-          x: value
-          y: density
-          title: Service Utilization Distribution and Readmission Status
-      - plots/explore/clinical_metrics_boxplot.png:
-          x: readmitted
-          y: value
-          title: Clinical Metrics Distribution and Readmission Status
-      - plots/explore/demographics_age_distribution.png:
-          x: age
-          y: count
-          title: Age Distribution and Readmission Status
-      - plots/explore/correlation_matrix_heatmap.png:
-          x: feature1
-          y: feature2
-          title: Correlation Matrix Heatmap
-      - plots/explore/feature_importance.png:
-          x: importance
-          y: feature
-          title: Top 20 Features by Importance
-      - plots/explore/feature_importance.csv:
-          x: feature
-          y: importance
-          title: Feature Importance Data
+      - plots/explore:
+          cache: true
 
   featurize:
     cmd: >-
@@ -403,96 +131,11 @@ stages:
       - data/processed/features.parquet:
           cache: true
     metrics:
-      - metrics/featurize/metrics.json:
-          cache: true
-      - metrics/featurize/statistics.json:
+      - metrics/featurize:
           cache: true
     plots:
-      - plots/featurize/feature_correlations.png:
+      - plots/featurize:
           cache: true
-          title: Feature Correlations Heatmap
-          x: feature
-          y: feature
-      - plots/featurize/feature_importance.png:
-          cache: true
-          title: Top 20 Features by Importance
-          x: importance
-          y: feature
-      - plots/featurize/feature_importance.csv:
-          cache: true
-          type: csv
-          x: feature
-          y: importance
-      - plots/featurize/readmission_distribution.png:
-          cache: true
-          title: Distribution of Readmission
-          x: readmitted
-          y: Count
-      - plots/featurize/age_distribution.png:
-          cache: true
-          title: Distribution of Age
-          x: age
-          y: Frequency
-      - plots/featurize/time_in_hospital_distribution.png:
-          cache: true
-          title: Distribution of Time in Hospital
-          x: time_in_hospital
-          y: Frequency
-      - plots/featurize/num_medications_distribution.png:
-          cache: true
-          title: Distribution of Number of Medications
-          x: num_medications
-          y: Frequency
-      - plots/featurize/num_procedures_distribution.png:
-          cache: true
-          title: Distribution of Number of Procedures
-          x: num_procedures
-          y: Frequency
-      - plots/featurize/num_medications_time_in_hospital_distribution.png:
-          cache: true
-          title: Distribution of Medications and Time in Hospital
-          x: num_medications|time_in_hospital
-          y: Frequency
-      - plots/featurize/num_medications_num_procedures_distribution.png:
-          cache: true
-          title: Distribution of Medications and Procedures
-          x: num_medications|num_procedures
-          y: Frequency
-      - plots/featurize/time_in_hospital_num_lab_procedures_distribution.png:
-          cache: true
-          title: Distribution of Time and Lab Procedures
-          x: time_in_hospital|num_lab_procedures
-          y: Frequency
-      - plots/featurize/num_medications_num_lab_procedures_distribution.png:
-          cache: true
-          title: Distribution of Medications and Lab Procedures
-          x: num_medications|num_lab_procedures
-          y: Frequency
-      - plots/featurize/num_medications_number_diagnoses_distribution.png:
-          cache: true
-          title: Distribution of Medications and Diagnoses
-          x: num_medications|number_diagnoses
-          y: Frequency
-      - plots/featurize/age_number_diagnoses_distribution.png:
-          cache: true
-          title: Distribution of Age and Diagnoses
-          x: age|number_diagnoses
-          y: Frequency
-      - plots/featurize/change_num_medications_distribution.png:
-          cache: true
-          title: Distribution of Changes and Medications
-          x: change|num_medications
-          y: Frequency
-      - plots/featurize/number_diagnoses_time_in_hospital_distribution.png:
-          cache: true
-          title: Distribution of Diagnoses and Time
-          x: number_diagnoses|time_in_hospital
-          y: Frequency
-      - plots/featurize/num_medications_numchange_distribution.png:
-          cache: true
-          title: Distribution of Medications and Changes
-          x: num_medications|numchange
-          y: Frequency
 
   feast:
     cmd: >-
@@ -520,12 +163,10 @@ stages:
       - pipeline/stages/feature_repo.py
       - pipeline/stages/stage.py
     outs:
-      - feature_repo/data_hash.txt
-      - feature_repo/feature_repo.py
-      - feature_repo/feature_store.yaml
-      - feature_repo/features.parquet
+      - feature_repo:
+          cache: true
     metrics:
-      - metrics/feast/metrics.json:
+      - metrics/feast:
           cache: true
 
   autogluon:
@@ -559,28 +200,11 @@ stages:
       - models/autogluon:
           cache: true
     metrics:
-      - metrics/autogluon/metrics.json:
+      - metrics/autogluon:
           cache: true
     plots:
-      - plots/autogluon/confusion_matrix.png:
-          title: Confusion Matrix
-          x: Predicted
-          y: Actual
-          template: confusion
-      - plots/autogluon/roc_curve.png:
-          title: ROC Curve
-          x: False Positive Rate (FPR)
-          y: True Positive Rate (TPR)
-          template: roc
-      - plots/autogluon/calibration_curve.png:
-          title: Calibration Curve
-          x: Mean Predicted Probability
-          y: Fraction of Positives
-          template: calibration
-      - plots/autogluon/probability_distribution.png:
-          title: Probability Distribution
-          x: Predicted Probability
-          y: Density
+      - plots/autogluon:
+          cache: true
 
   logisticregression:
     cmd: >-
@@ -608,32 +232,14 @@ stages:
       - pipeline/stages/logisticregression.py
       - pipeline/stages/stage.py
     outs:
-      - models/logisticregression/model.pth:
-          cache: true
-      - models/logisticregression/scaler.joblib:
+      - models/logisticregression:
           cache: true
     metrics:
-      - metrics/logisticregression/metrics.json:
-          cache: true
-      - metrics/logisticregression/feature_importance.csv:
+      - metrics/logisticregression:
           cache: true
     plots:
-      - plots/logisticregression/confusion_matrix.png:
-          title: Confusion Matrix
-          x: Predicted
-          y: Actual
-          template: confusion
-      - plots/logisticregression/roc_curve.png:
-          x: FPR
-          y: TPR
-          title: ROC Curve
-      - plots/logisticregression/precision_recall_curve.png:
-          x: Recall
-          y: Precision
-          title: Precision-Recall Curve
-      - plots/logisticregression/feature_importance.png:
-          y: feature
-          x: importance
+      - plots/logisticregression:
+          cache: true
 
   neuralnetwork:
     cmd: >-
@@ -652,7 +258,6 @@ stages:
       --with torch
       python pipeline neuralnetwork
     deps:
-      - .venv
       - data/processed/features.parquet
       - pipeline/__init__.py
       - pipeline/__main__.py
@@ -665,40 +270,8 @@ stages:
       - models/neuralnetwork:
           cache: true
     metrics:
-      - metrics/neuralnetwork/metrics.json:
-          cache: true
-      - metrics/neuralnetwork/classification_report.json:
+      - metrics/neuralnetwork:
           cache: true
     plots:
-      - plots/neuralnetwork/confusion_matrix.png:
-          title: Confusion Matrix
-          x: Predicted
-          y: Actual
-          template: confusion
-      - plots/neuralnetwork/roc_curve.png:
-          title: ROC Curve
-          x: False Positive Rate (FPR)
-          y: True Positive Rate (TPR)
-          template: roc
-      - plots/neuralnetwork/precision_recall_curve.png:
-          title: Precision-Recall Curve
-          x: Recall
-          y: Precision
-          template: pr
-      - plots/neuralnetwork/calibration_curve.png:
-          title: Calibration Curve
-          x: Mean Predicted Probability
-          y: Fraction of Positives
-          template: calibration
-      - plots/neuralnetwork/probability_distribution.png:
-          title: Probability Distribution
-          x: Predicted Probability
-          y: Density
-      - plots/neuralnetwork/training_loss.png:
-          title: Training Loss Over Epochs
-          x: Epoch
-          y: Loss
-      - plots/neuralnetwork/training_accuracy.png:
-          title: Training Accuracy Over Epochs
-          x: Epoch
-          y: Accuracy
+      - plots/neuralnetwork:
+          cache: true
